four commit Register and Login

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,9 @@
     </section>
 
     <section class="welcome-section">
-        <h1 id="welcome-message">Bienvenido!!!</h1>
+        <h1 id="welcome-message">¡Bienvenido!</h1>
     </section>
+    
 
     <section class="about-us">
         <div class="branding">
