Five commit shopping cart

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,9 @@
                 <button onclick="location.href='registro.html'">Crear Usuario</button>
             </div>
             <div class="carrito-icon">
-                <img src="imagenes/iconos/carrito-icon.png" alt="Carrito">
+                <a href="carrito.html">
+                    <img src="imagenes/iconos/carrito-icon.png" alt="Carrito">
+                </a>
             </div>
         </div>
     </header>
