--- a/public/arabes.html
+++ b/public/arabes.html
@@ -22,11 +22,13 @@
         </nav>
         <div class="search-cart-auth">
             <div class="auth-buttons">
-                <button>Iniciar Sesión</button>
-                <button>Crear Usuario</button>
+                <button onclick="location.href='login.html'">Iniciar Sesión</button>
+                <button onclick="location.href='registro.html'">Crear Usuario</button>
             </div>
             <div class="carrito-icon">
-                <img src="imagenes/iconos/carrito-icon.png" alt="Carrito">
+                <a href="carrito.html">
+                    <img src="imagenes/iconos/carrito-icon.png" alt="Carrito">
+                </a>
             </div>
         </div>
     </header>
@@ -67,7 +69,6 @@
             <a href="#"><img src="imagenes/iconos/icon-wpp.png" alt="WhatsApp"></a>
         </div>
     </footer>
-    
-    
+    <script src="./JavaScripts/scripts.js"></script>
 </body>
 </html>
