--- a/public/arabes.html
+++ b/public/arabes.html
@@ -32,33 +32,11 @@
             </div>
         </div>
     </header>
-
     <main>
         <h1>Perfumes Árabes</h1>
-        <section class="productos-grid">
-            <div class="producto-item">
-                <a href="./producto-detalle.html">
-                <img src="./imagenes/perfumes/khamrah1.jpg" alt="khamrah Eau De Parfum">
-                <h2>khamrah</h2>
-                <p>khamrah Eau De Parfum</p>
-                <p>100 ml - $82</p>
-                <p>120ml - 107$</p>
-            </a>
-            </div>
-            <div class="producto-item">
-                <img src="./imagenes/perfumes/qahwa.jpg" alt="Khamrah qahwa Eau De Parfum">
-                <h2>Khamrah qahwa</h2>
-                <p>Khamrah qahwa Eau De Parfum</p>
-                <p>100 ml - $90</p>
-            </div>
-            <div class="producto-item">
-                <img src="./imagenes/perfumes/lataffa-asad.jpg" alt="lattafa asad">
-                <h2>Asad Zanzibar</h2>
-                <p>Asad Zanzibar Eau De Parfum</p>
-                <p>100 ml - $45</p>
-            </div>
-        </section>
+        <div id="productos-grid"></div> 
     </main>
+    
 
     <footer>
         <p>contacto</p>
@@ -70,5 +48,6 @@
         </div>
     </footer>
     <script src="./JavaScripts/scripts.js"></script>
+    <script src="./JavaScripts/arabe.js"></script>
 </body>
 </html>
