--- a/public/combos.html
+++ b/public/combos.html
@@ -33,7 +33,16 @@
         </div>
     </header>
 
-
+    <main>
+        <section>
+            <div class="title">
+                <h1>Combos Firmes</h1>
+            </div>
+            <div id="combos-grid">
+                
+            </div> 
+        </section>
+    </main>
 
     <footer>
         <p>contacto</p>
@@ -46,5 +55,6 @@
     </footer>
 
     <script src="./JavaScripts/scripts.js"></script>
+    <script src="./JavaScripts/combo.js"></script>
 </body>
 </html>
