--- a/public/dolceG.html
+++ b/public/dolceG.html
@@ -32,15 +32,15 @@
             </div>
         </div>
     </header>
+
     <main>
         <section>
-            <div class="title"><h1>Perfumes Árabes</h1></div>
+            <div class="title"><h1>Perfumes Dolce & Gabbana</h1></div>
             <div id="productos-grid" class="productos-grid">
-                
-            </div> 
+
+            </div>
         </section>
     </main>
-    
 
     <footer>
         <p>contacto</p>
@@ -52,6 +52,6 @@
         </div>
     </footer>
     <script src="./JavaScripts/scripts.js"></script>
-    <script src="./JavaScripts/arabe.js"></script>
+    <script src="./JavaScripts/dolceG.js"></script>
 </body>
 </html>
