--- a/public/marcas.html
+++ b/public/marcas.html
@@ -43,13 +43,13 @@
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./cherrera.html">
                     <img src="./imagenes/marcas/CH-HC.jpg" alt="Carolina Herrera">
                     <p>Carolina Herrera</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./dolceG.html">
                     <img src="./imagenes/marcas/dolceGabbana.jpg" alt="Dolce & Gabbana">
                     <p>Dolce & Gabbana</p>
                 </a>
