--- a/public/combos.html
+++ b/public/combos.html
@@ -56,5 +56,6 @@
 
     <script src="./JavaScripts/scripts.js"></script>
     <script src="./JavaScripts/combo.js"></script>
+    <script src="./JavaScripts/verificaToken.js"></script>
 </body>
 </html>
