--- a/public/marcas.html
+++ b/public/marcas.html
@@ -55,37 +55,37 @@
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./givenchy.html">
                     <img src="./imagenes/marcas/gvchy.jpg" alt="Givenchy">
                     <p>Givenchy</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./jpg.html">
                     <img src="./imagenes/marcas/jpg.png" alt="Jean Paul Gaultier">
                     <p>Jean Paul Gaultier</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./moncler.html">
                     <img src="./imagenes/marcas/mocler1.png" alt="Moncler">
                     <p>Moncler</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./PRabanne.html">
                     <img src="./imagenes/marcas/prb.png" alt="Paco Rabanne">
                     <p>Paco Rabanne</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./versace.html">
                     <img src="./imagenes/marcas/versace.jpg" alt="Versace">
                     <p>Versace</p>
                 </a>
             </div>
             <div class="marca-item">
-                <a href="#">
+                <a href="./armani.html">
                     <img src="./imagenes/marcas/armani.png" alt="Giorgio Armani">
                     <p>Giorgio Armani</p>
                 </a>
