--- a/public/producto-detalle.html
+++ b/public/producto-detalle.html
@@ -35,23 +35,8 @@
 
     <main>
         <section class="producto-detalle">
-            <div class="producto-imagen">
-                <img src="./imagenes/perfumes/lataffa-khamarah.jpg" alt="Khamrah Eau De Parfum">
-            </div>
-            <div class="producto-info">
-                <h1>Khamrah</h1>
-                <p>
-                    Khamrah de Lattafa Perfumes es una fragancia de la familia olfativa Aromática Especiada para Hombres y Mujeres. Esta fragrancia es nueva. Khamrah se lanzó en 2022. 
-                    Las Notas de Salida son canela, nuez moscada y bergamota; las Notas de Corazón son dátiles, praliné,nardos y Mahonial; las Notas de Fondo son vainilla,
-                    haba tonka, Amberwood, mirra, benjuí y Akigalawood.
-                </p>
-                <p><strong>Khamrah Eau De Parfum</strong></p>
-                <p>100 ml - 82$</p>
-                <p>120ml - 107$</p>
-                <div class="opciones">
-                    <button class="btn-agregar">100 ml - 82$ - Agregar al carrito</button>
-                    <button class="btn-agregar">120 ml - 107$ - Agregar al carrito</button>
-                </div>
+            <div id="producto-container" class="producto-container">
+                
             </div>
         </section>
     </main>
@@ -66,5 +51,6 @@
         </div>
     </footer>
     <script src="./JavaScripts/scripts.js"></script>
+    <script src="./JavaScripts/detalle-producto.js"></script>
 </body>
 </html>
