--- a/public/login.html
+++ b/public/login.html
@@ -41,7 +41,7 @@
                 <label for="password">Contraseña:</label>
                 <input type="password" id="password" name="password" placeholder="********" required>
     
-                <button type="submit">
+                <button type="submit" id="login-button">
                     <span class="transition"></span>
                     <span class="gradient"></span>
                     <span class="label">Iniciar Sesión</span>
